--- a/templates/publisher/campaigntopublisher_list.html
+++ b/templates/publisher/campaigntopublisher_list.html
@@ -54,7 +54,17 @@
         </div>
         {% endif %}
       </div>
+      <form method="GET">
+        <div class="form-row">
 
+          <div class="col-md-4 mb-3">
+            <label>Status</label>
+            {{filter.form.status_cam}}
+          </div>
+
+          <button class="btn btn-primary" type="submit" name="submit">Search</button>
+        </div>
+      </form>
       <div class="row">
         <div class="col-md-12">
 
@@ -62,7 +72,7 @@
             <div class="card-body">
               <div class="table-responsive">
                 {% if campaigntopublisher_list %}
-                <table id="project-list" class="table table-lg">
+                <table id="myTable" class="table table-striped table-bordered">
                   <thead>
                     <tr>
                       <th>ID</th>
@@ -75,7 +85,7 @@
                   </thead>
                   <tbody>
                     <tr></tr>
-                    {% for link in campaigntopublisher_list %}
+                    {% for link in filter.qs %}
                     <tr>
                       <td>
                         <span>{{ link.pk }}</span>
