--- a/templates/publisher/publisher_campaign_detail.html
+++ b/templates/publisher/publisher_campaign_detail.html
@@ -27,7 +27,6 @@
 </head>
 
 <body class="">
-
   <!-- begin::preloader-->
   <div class="preloader">
     <div class="preloader-icon"></div>
@@ -54,7 +53,13 @@
           </ol>
         </nav>
       </div>
+      <!-- <form method="GET">
+        <div class="form-row">
 
+          <h1>Start Date : <input type="date" name="start_date" value=""></h1>
+          <button class="btn btn-primary" type="submit" name="submit">Search</button>
+        </div>
+      </form> -->
       <div class="row">
         <div class="col-md-12">
 
