--- a/templates/agency/agency_list.html
+++ b/templates/agency/agency_list.html
@@ -62,7 +62,7 @@
             <div class="card-body">
               <div class="table-responsive">
                 {% if agency_list %}
-                <table id="project-list" class="table table-lg">
+                <table id="myTable" class="table table-striped table-bordered">
                   <thead>
                     <tr>
                       <th>ID</th>
