--- a/templates/analytics/campaign_list.html
+++ b/templates/analytics/campaign_list.html
@@ -50,7 +50,6 @@
           </ol>
         </nav>
       </div>
-
       <div class="row">
         <div class="col-md-12">
 
@@ -58,7 +57,7 @@
             <div class="card-body">
               <div class="table-responsive">
                 {% if campaign_list %}
-                <table id="project-list" class="table table-lg">
+                <table id="myTable" class="table table-striped table-bordered">
                   <thead>
                     <tr>
                       <th>ID - Campaign</th>
@@ -81,10 +80,22 @@
                       <td class="text-center">
                         <span>{{ campaign.campaign_type | upper }}</span>
                       </td>
-                      <td class="text-center">{{click.count}}</td>
-                      <td class="text-center">{{lead.count}}</td>
                       <td class="text-center">
-                        <span class="text-info">{{ lead.count|div:click.count|mul:100|floatformat:2 }} %</span>
+                        {% for key, value in click_data %}
+                        {% if key == campaign.campaign_name %}
+                        {{value}}
+                        {% endif %}
+                        {% endfor %}
+                      </td>
+                      <td class="text-center">
+                        {% for key, value in lead_data %}
+                        {% if key == campaign.campaign_name %}
+                        {{value}}
+                        {% endif %}
+                        {% endfor %}
+                      </td>
+                      <td class="text-center">
+                        <span class="text-info"> %</span>
                       </td>
 
                     </tr>
