--- a/templates/analytics/objectlead_list.html
+++ b/templates/analytics/objectlead_list.html
@@ -24,6 +24,43 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
+<script>
+  //user-defined function to download CSV file
+  function downloadCSV(csv, filename) {
+    var csvFile;
+    var downloadLink;
+
+    //define the file type to text/csv
+    csvFile = new Blob([csv], {
+      type: 'text/csv'
+    });
+    downloadLink = document.createElement("a");
+    downloadLink.download = filename;
+    downloadLink.href = window.URL.createObjectURL(csvFile);
+    downloadLink.style.display = "none";
+
+    document.body.appendChild(downloadLink);
+    downloadLink.click();
+  }
+
+  //user-defined function to export the data to CSV file format
+  function exportTableToCSV(filename) {
+    //declare a JavaScript variable of array type
+    var csv = [];
+    var rows = document.querySelectorAll("table tr");
+
+    //merge the whole data in tabular form
+    for (var i = 0; i < rows.length; i++) {
+      var row = [],
+        cols = rows[i].querySelectorAll("td, th");
+      for (var j = 0; j < cols.length; j++)
+        row.push(cols[j].innerText);
+      csv.push(row.join(","));
+    }
+    //call the function to download the CSV file
+    downloadCSV(csv.join("\n"), filename);
+  }
+</script>
 
 <body class="">
 
@@ -49,6 +86,39 @@
           </ol>
         </nav>
       </div>
+      <!-- <form class="" method="GET">
+        {{filter.form}}
+        <button type="submit" name="submit">Search</button>
+      </form> -->
+
+      <form method="GET">
+
+        <div class="form-row">
+          <div class="col-md-6 mb-3">
+            <label>Campaign Name</label>
+            {{filter.form.campaign}}
+          </div>
+          <div class="col-md-6 mb-3">
+            <label>Publisher</label>
+            {{filter.form.publisher}}
+          </div>
+          <div class="col-md-4 mb-3">
+            <label>Start Date</label>
+            {{filter.form.start_date}}
+          </div>
+          <div class="col-md-4 mb-3">
+            <label>End Date</label>
+            {{filter.form.end_date}}
+          </div>
+          <div class="col-md-4 mb-3">
+            <label>Date Range</label>
+            {{filter.form.date_range}}
+          </div>
+          <button class="btn btn-primary" type="submit" name="submit">Search</button>
+        </div>
+
+      </form>
+
 
       <div class="row">
         <div class="col-md-12">
@@ -57,7 +127,7 @@
             <div class="card-body">
               <div class="table-responsive">
                 {% if objectlead_list %}
-                <table id="project-list" class="table table-lg">
+                <table id="myTable" class="table table-striped table-bordered">
                   <thead>
                     <tr>
                       <th>ID</th>
@@ -70,7 +140,7 @@
                   </thead>
                   <tbody>
                     <tr></tr>
-                    {% for lead in objectlead_list %}
+                    {% for lead in filter.qs %}
                     <tr>
                       <td>
                         <span>{{ lead.pk }}</span>
@@ -88,13 +158,14 @@
                     {% endfor %}
                   </tbody>
                 </table>
+
                 {% else %}
                 <h3>No Lead Yet</h3>
                 {% endif %}
               </div>
             </div>
           </div>
-
+          <button class="btn btn-outline-primary active" onclick="exportTableToCSV('report{% now 'Y-m-j' %}.csv')"> Export Report </button>
         </div>
       </div>
 
@@ -122,6 +193,8 @@
 
   <!-- App scripts -->
   <script src="{% static 'js/app.min.js' %}"></script>
+
+
 
 </body>
 
