--- a/templates/publisher/publisher_detail.html
+++ b/templates/publisher/publisher_detail.html
@@ -57,7 +57,7 @@
             <div class="card-body">
               <div class="table-responsive">
                 {% if campaigns %}
-                <table id="project-list" class="table table-lg">
+                <table id="myTable" class="table table-striped table-bordered">
                   <thead>
                     <tr>
                       <th>ID</th>
@@ -81,7 +81,7 @@
                       <td class="text-center">{{ campaign.campaign.campaign_type | upper }}
                       </td>
                       <td class="text-center">
-                        <a href="#" class="text-info">Pixel Link</a>
+                        <a href="" class="text-info" data-toggle="modal" data-target="#newTaskModal">Pixel Link</a>
                       </td>
 
                       <td class="text-center">
@@ -117,7 +117,54 @@
 
         </div>
       </div>
+      <div class="modal fade" id="newTaskModal" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Pixels</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <i class="fa fa-close"></i>
+              </button>
+            </div>
+            <div class="modal-body">
+              <div>
+                <div class="form-group row">
+                  <label class="col-sm-3 col-form-label">Image Pixel</label>
+                  <div class="col-sm-9">
+                    <div>
 
+                      &lt;img src="192.168.29.16:8000/publisher/session" height="1" width="1" /&gt;
+
+                    </div>
+                  </div>
+                </div>
+                <hr>
+                <div class="form-group row">
+                  <label class="col-sm-3 col-form-label">IFRAME Pixel</label>
+                  <div class="col-sm-9">
+                    <div>
+
+                      &lt;iframe src="192.168.29.16:8000/publisher/session" height="0" width="0"&gt;&lt;/iframe&gt;
+
+                    </div>
+                  </div>
+                </div>
+                <hr>
+                <div class="form-group row">
+                  <label class="col-sm-3 col-form-label">Script Pixel</label>
+                  <div class="col-sm-9">
+                    <div>
+
+                      &lt;script src="192.168.29.16:8000/publisher/session" height="0" width="0"&gt;&lt;/script&gt;
+
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
     </div>
 
