--- a/templates/publisher/publisher_list.html
+++ b/templates/publisher/publisher_list.html
@@ -57,7 +57,7 @@
             <div class="card-body">
               <div class="table-responsive">
                 {% if publisher_list %}
-                <table id="project-list" class="table table-lg">
+                <table id="myTable" class="table table-striped table-bordered">
                   <thead>
                     <tr>
                       <th>ID</th>
