postback url added

--- a/templates/campaign/campaign_list.html
+++ b/templates/campaign/campaign_list.html
@@ -204,6 +204,17 @@
                     </div>
                   </div>
                 </div>
+                <hr>
+                <div class="form-group row">
+                  <label class="col-sm-3 col-form-label">Postback URL</label>
+                  <div class="col-sm-9">
+                    <div>
+
+                      http://143.110.117.56/publisher/session
+
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
