--- a/templates/analytics/campaign_list.html
+++ b/templates/analytics/campaign_list.html
@@ -38,6 +38,21 @@
   <div class="content-body">
 
     <div class="content">
+      <form method="GET" action=".">
+        <div class="form-row">
+          <div class="form-group col-md-12 col-lg-6">
+            <label for="publishDateMin">Start Date</label>
+            <input type="date" class="form-control" id="publishDateMin" name="date_min">
+          </div>
+          <div class="form-group col-md-12 col-lg-6">
+            <label for="publishDateMax">End Date</label>
+            <input type="date" class="form-control" id="publishDateMax" name="date_max">
+          </div>
+        </div>
+
+
+        <button type="submit" class="btn btn-primary">Search</button>
+      </form>
 
 
       <div class="page-header justify-content-between">
