--- a/templates/index.html
+++ b/templates/index.html
@@ -291,21 +291,21 @@
                   </tr>
                 </thead>
                 <tbody>
-                  <tr>
+                  <!-- <tr>
                     <td>
                       <a href="#">Publisher</a>
                     </td>
                     <td>{{publisher.count}}</td>
-                  </tr>
+                  </tr> -->
                   <tr>
                     <td>
-                      <a href="#">Campaign <span class="badge badge-danger ml-1">New</span></a>
+                      <a href="http://192.168.29.16:8000/campaign/?status=pending&submit=">Campaign <span class="badge badge-danger ml-1">New</span></a>
                     </td>
                     <td>{{campaign.count}}</td>
                   </tr>
                   <tr>
                     <td>
-                      <a href="#">Campaign Request</a>
+                      <a href="http://192.168.29.16:8000/publisher/runningcamp?status_cam=pending&submit=">Campaign Request</a>
                     </td>
                     <td>{{campaign_request.count}}</td>
                   </tr>
