--- a/templates/campaign/campaign_list.html
+++ b/templates/campaign/campaign_list.html
@@ -111,7 +111,7 @@
                       <td class="text-center">{{ campaign.campaign_type | upper }}
                       </td>
                       <td class="text-center">
-                        <a href="" class="text-info" data-toggle="modal" data-target="#newTaskModal">Pixel Link</a>
+                        <a href="" class="text-info" data-toggle="modal" data-target="#newTaskModal">Pixels</a>
                       </td>
 
                       <td class="text-center">
@@ -189,7 +189,7 @@
                   <div class="col-sm-9">
                     <div>
 
-                      &lt;img src="192.168.29.16:8000/publisher/session" height="1" width="1" /&gt;
+                      &lt;img src="http://www.kagayaki.co.in/publisher/session" height="1" width="1" /&gt;
 
                     </div>
                   </div>
@@ -200,7 +200,7 @@
                   <div class="col-sm-9">
                     <div>
 
-                      &lt;iframe src="192.168.29.16:8000/publisher/session" height="0" width="0"&gt;&lt;/iframe&gt;
+                      &lt;iframe src="http://www.kagayaki.co.in/publisher/session" height="0" width="0"&gt;&lt;/iframe&gt;
 
                     </div>
                   </div>
@@ -211,7 +211,7 @@
                   <div class="col-sm-9">
                     <div>
 
-                      &lt;script src="192.168.29.16:8000/publisher/session" height="0" width="0"&gt;&lt;/script&gt;
+                      &lt;script src="http://www.kagayaki.co.in/publisher/session" height="0" width="0"&gt;&lt;/script&gt;
 
                     </div>
                   </div>
@@ -222,7 +222,7 @@
                   <div class="col-sm-9">
                     <div>
 
-                      http://143.110.117.56/publisher/session
+                      http://www.kagayaki.co.in/publisher/session
 
                     </div>
                   </div>
