--- a/templates/includes/_footer.html
+++ b/templates/includes/_footer.html
@@ -1,10 +1,10 @@
 {% load static %}
 {% load widget_tweaks %}
 <footer class="content-footer">
-  <div>© 2020 - <a href="https://www.goldenbeaconmedia.com/" target="_blank">Golden Beacon Media</a></div>
+  <div>© 2020 - <a href="https://www.kagayaki.co.in" target="_blank">Kagayaki (輝き) Tracking System</a></div>
   <div>
     <nav class="nav">
-      <a href="mailto:help@gbm.com" class="nav-link">Get Help</a>
+      <a href="mailto:help@kagayaki.co.in" class="nav-link">Get Help</a>
     </nav>
   </div>
 </footer>
