Pixel not working

--- a/templates/session.html
+++ b/templates/session.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="X-Frame-Options" content="sameorigin">
+  <meta http-equiv="refresh" content="0;url=https://www.kagayaki.co.in/publisher/session" />
   <title></title>
 </head>
 
