--- a/templates/session.html
+++ b/templates/session.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="refresh" content="0;url=https://www.kagayaki.co.in/publisher/session" />
   <title></title>
 </head>
 
