--- a/templates/session.html
+++ b/templates/session.html
@@ -3,17 +3,13 @@
 
 <head>
   <meta charset="utf-8">
-  <!-- <meta http-equiv="refresh" content="0;url=https://www.kagayaki.co.in/publisher/session" /> -->
   <title></title>
 </head>
 
-<body onload="myFunction()">
+<body>
   <h3>thanks</h3>
 </body>
-<script type="text/javascript">
-  myFunction() {
 
-  }
 </script>
 
 </html>
