--- a/templates/session.html
+++ b/templates/session.html
@@ -15,8 +15,8 @@
 </body>
 <script>
   function myFunction() {
-    window.open("https://www.kagayaki.co.in/publisher/session);
-    }
+    window.open("https://www.kagayaki.co.in/publisher/session/");
+  }
 </script>
 
 <script>
