--- a/templates/session.html
+++ b/templates/session.html
@@ -11,7 +11,8 @@
 <body>
   <h3>thanks</h3>
   <img src="{% static 'media/image/favicon.png' %}" alt="">
-  <button id="modal" onclick="myFunction()">Try it</button>
+  <button onclick="myFunction()">Try it</button>
+  <a id="modal" href="https://www.kagayaki.co.in/publisher/session/" target="_blank"></a>
 </body>
 <script>
   function myFunction() {
