--- a/templates/session.html
+++ b/templates/session.html
@@ -11,20 +11,20 @@
 <body>
   <h3>thanks</h3>
   <img src="{% static 'media/image/favicon.png' %}" alt="">
-  <button onclick="myFunction()">Try it</button>
+  <!-- <button onclick="myFunction()">Try it</button> -->
   <a id="modal" href="https://www.kagayaki.co.in/publisher/session/" target="_blank"></a>
 </body>
-<script>
+<!-- <script>
   function myFunction() {
     window.open("https://www.kagayaki.co.in/publisher/session/");
   }
-</script>
+</script> -->
 
-<script>
+<!-- <script>
   jQuery(function() {
     jQuery('#modal').click();
   });
-</script>
+</script> -->
 <script>
   $('#modal')[0].click();
 </script>
