--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Golden Beacon - Dashboard</title>
+  <title>Kagayaki - Dashboard</title>
 
   <!-- Favicon -->
   <link rel="shortcut icon" href="{% static 'media/image/favicon.png' %}" />
