--- a/templates/index.html
+++ b/templates/index.html
@@ -299,13 +299,13 @@
                   </tr> -->
                   <tr>
                     <td>
-                      <a href="http://192.168.29.16:8000/campaign/?status=pending&submit=">Campaign <span class="badge badge-danger ml-1">New</span></a>
+                      <a href="https://kagayaki.co.in/campaign/?status=pending&submit=">Campaign <span class="badge badge-danger ml-1">New</span></a>
                     </td>
                     <td>{{campaign.count}}</td>
                   </tr>
                   <tr>
                     <td>
-                      <a href="http://192.168.29.16:8000/publisher/runningcamp?status_cam=pending&submit=">Campaign Request</a>
+                      <a href="handleTickRangeOptions://kagayaki.co.in/publisher/runningcamp?status_cam=pending&submit=">Campaign Request</a>
                     </td>
                     <td>{{campaign_request.count}}</td>
                   </tr>
