Link on dashboard

--- a/templates/index.html
+++ b/templates/index.html
@@ -305,7 +305,7 @@
                   </tr>
                   <tr>
                     <td>
-                      <a href="handleTickRangeOptions://kagayaki.co.in/publisher/runningcamp?status_cam=pending&submit=">Campaign Request</a>
+                      <a href="https://kagayaki.co.in/publisher/runningcamp?status_cam=pending&submit=">Campaign Request</a>
                     </td>
                     <td>{{campaign_request.count}}</td>
                   </tr>
