--- a/templates/analytics/objectlead_list.html
+++ b/templates/analytics/objectlead_list.html
@@ -134,6 +134,7 @@
                       <th class="text-center">Publisher</th>
                       <th class="text-center">Campaign</th>
                       <th class="text-center">IP Address</th>
+                      <th class="text-center">Click ID</th>
                       <th class="text-center">Date & Time</th>
                       <!-- <th class="text-center">Action</th> -->
                     </tr>
@@ -152,6 +153,7 @@
                         <span class="text-info">{{ lead.campaign }}</span>
                       </td>
                       <td class="text-center">{{lead.ip_address}}</td>
+                      <td class="text-center">{{lead.click_id}}</td>
                       <td class="text-center">{{lead.lead_timestamp}}</td>
 
                     </tr>
