--- a/templates/agency/agency_list.html
+++ b/templates/agency/agency_list.html
@@ -79,7 +79,7 @@
                         <span>{{ agency.pk }}</span>
                       </td>
                       <td class="text-center">
-                        <a href="#" class="text-info">{{ agency.agency_name }}</a>
+                        <a class="text-info" style="cursor:pointer;">{{ agency.agency_name }}</a>
                       </td>
 
                       <td class="text-center">
