--- a/templates/advertiser/advertiser_list.html
+++ b/templates/advertiser/advertiser_list.html
@@ -79,7 +79,7 @@
                         <span>{{ advertiser.pk }}</span>
                       </td>
                       <td class="text-center">
-                        <a href="#" class="text-info">{{ advertiser.company_name }}</a>
+                        <a class="text-info" style="cursor:pointer;">{{ advertiser.company_name }}</a>
                       </td>
 
                       <td class="text-center">
