--- a/templates/campaign/campaign_list.html
+++ b/templates/campaign/campaign_list.html
@@ -189,18 +189,18 @@
                   <div class="col-sm-9">
                     <div>
 
-                      &lt;img src="http://www.kagayaki.co.in/publisher/session" height="1" width="1" /&gt;
+                      &lt;img src="https://www.kagayaki.co.in/publisher/session" height="1" width="1" /&gt;
 
                     </div>
                   </div>
                 </div>
                 <hr>
                 <div class="form-group row">
-                  <label class="col-sm-3 col-form-label">IFRAME Pixel</label>
+                  <label class="col-sm-3 col-form-label">IFrame Pixel</label>
                   <div class="col-sm-9">
                     <div>
 
-                      &lt;iframe src="http://www.kagayaki.co.in/publisher/session" height="0" width="0"&gt;&lt;/iframe&gt;
+                      &lt;iframe src="https://www.kagayaki.co.in/publisher/session" height="0" width="0"&gt;&lt;/iframe&gt;
 
                     </div>
                   </div>
@@ -211,7 +211,7 @@
                   <div class="col-sm-9">
                     <div>
 
-                      &lt;script src="http://www.kagayaki.co.in/publisher/session" height="0" width="0"&gt;&lt;/script&gt;
+                      &lt;script src="https://www.kagayaki.co.in/publisher/session" height="0" width="0"&gt;&lt;/script&gt;
 
                     </div>
                   </div>
@@ -222,7 +222,7 @@
                   <div class="col-sm-9">
                     <div>
 
-                      http://www.kagayaki.co.in/publisher/session
+                      https://www.kagayaki.co.in/postback/track/?clk_id=&#123;&#123;click_id&#125;&#125;
 
                     </div>
                   </div>
