--- a/templates/includes/_sidemenu.html
+++ b/templates/includes/_sidemenu.html
@@ -171,7 +171,7 @@
           <!-- end::header fullscreen -->
 
           <!-- begin::header search -->
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a href="#" class="nav-link" title="Search" data-toggle="dropdown">
               <i data-feather="search"></i>
             </a>
@@ -187,7 +187,7 @@
                 </div>
               </form>
             </div>
-          </li>
+          </li> -->
           <!-- end::header search -->
 
           <!-- begin::apps -->
