Copyright year changed

--- a/templates/includes/_footer.html
+++ b/templates/includes/_footer.html
@@ -1,7 +1,7 @@
 {% load static %}
 {% load widget_tweaks %}
 <footer class="content-footer">
-  <div>© 2020 - <a href="https://www.kagayaki.co.in" target="_blank">Kagayaki (輝き) Tracking System</a></div>
+  <div>© 2021 - <a href="https://www.kagayaki.co.in" target="_blank">Kagayaki (輝き) Tracking Platform</a></div>
   <div>
     <nav class="nav">
       <a href="mailto:help@kagayaki.co.in" class="nav-link">Get Help</a>
