--- a/templates/analytics/objectlead_list.html
+++ b/templates/analytics/objectlead_list.html
@@ -105,6 +105,7 @@
           <div class="col-md-4 mb-3">
             <label>Start Date</label>
             {{filter.form.start_date}}
+
           </div>
           <div class="col-md-4 mb-3">
             <label>End Date</label>
@@ -118,6 +119,10 @@
         </div>
 
       </form>
+      <button class="btn btn-danger btn-sm" onclick="clearStartDate()">Clear Star Date</button>
+      <button class="btn btn-danger btn-sm" onclick="clearEndDate()">Clear End Date</button>
+      <button class="btn btn-danger btn-sm" onclick="clearBothDate()">Clear Dates</button>
+
 
 
       <div class="row">
@@ -195,8 +200,20 @@
 
   <!-- App scripts -->
   <script src="{% static 'js/app.min.js' %}"></script>
+  <script>
+    function clearStartDate() {
+      document.getElementById("startdate").value = ""
+    }
 
+    function clearEndDate() {
+      document.getElementById("enddate").value = ""
+    }
 
+    function clearBothDate() {
+      document.getElementById("enddate").value = "";
+      document.getElementById("startdate").value = "";
+    }
+  </script>
 
 </body>
 
